# oits_convert_table_waybill_print

./: pyproject.toml
converter_table/: main.py
tables/: table_in.html  table_out.html  table_out.json  table_templates.html
